<resources>
    <string name="app_name">Angel Broking B2B</string>
    <string name="inbox">Inbox</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="all_tasks">All Tasks</string>
    <string name="trips">Trips</string>
    <string name="meetings">Meetings</string>
    <string name="new_folder">New Folder</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="select_folder_colour">Select folder colour</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_meeting_details">Enter meeting details...</string>
    <string name="select_priority">Select priority</string>
    <string name="edit">EDIT</string>
    <string name="edit_lower">Edit</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="type_here">Type here...</string>
    <string name="priority">Priority</string>
    <string name="none">None</string>
    <string name="move_to">Move To</string>
    <string name="moved_to">Moved To</string>
    <string name="select_date">Select Task date</string>
    <string name="select_time">Select Task Time</string>
    <string name="add_task">Enter Task</string>
    <string name="work">Work</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="lbl_exit_task_message">Do you want to exit task?</string>
    <string name="select_a_filter">Select a filter</string>
    <string name="select_repeat">Select Repeat Mode</string>
    <string name="select_move_to">Select Move to</string>
    <string name="due">Due</string>
    <string name="remind_me">Remind me at</string>
    <string name="select_repeat_mode">Select repeat mode</string>
    <string name="description">Description</string>
    <string name="enter_name_of_recipient">Search...</string>

    <array name="colours">
        <item>@color/light_1</item>
        <item>@color/light_2</item>
        <item>@color/light_3</item>
        <item>@color/light_4</item>
        <item>@color/light_5</item>
        <item>@color/light_6</item>
        <item>@color/light_7</item>
        <item>@color/light_8</item>
        <item>@color/light_9</item>
        <item>@color/light_10</item>
        <item>@color/light_11</item>
        <item>@color/light_12</item>
        <item>@color/light_13</item>
        <item>@color/light_14</item>
        <item>@color/light_15</item>
        <item>@color/light_16</item>
        <item>@color/light_17</item>
        <item>@color/light_18</item>
    </array>

    <string name="regular_font">quicksand_book.otf</string>
    <string name="bold_font">quicksand_bold.otf</string>
    <string name="create_task">Create Task</string>
    <string name="heading">Task Name</string>
    <string name="alert">Alert before</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location">Location</string>
    <string name="start_date_time">Start date and time</string>
    <string name="select_date_time">Select date and time</string>
    <string name="end_date_time">End date and time</string>
    <string name="select">Select</string>
    <string name="home">Home</string>
    <string name="task_id">GET_TASKID</string>
    <string name="parent_column">PARENT_COLUMN</string>
    <string name="folder">folder</string>
    <string name="completed">Completed</string>
    <string name="finish">  Finish</string>
    <string name="unfinish">Unfinish</string>
    <string name="no_more_folders">No more folders</string>
    <string name="no_task_available">No Tasks Available To Show</string>
    <string name="select_date_amp_time"><![CDATA[Select Date & Time]]></string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very high</string>
    <string name="priority_yellow">yellow</string>
    <string name="priority_blue">blue</string>
    <string name="priority_green">green</string>
    <string name="priority_red">red</string>
    <string name="priority_level_low">Low</string>
    <string name="priority_level_medium">Medium</string>
    <string name="priority_level_high">High</string>
    <string name="priority_level_very_high">Very high</string>
    <string name="please_select_time">Please Select Time</string>
    <string name="select_task_date">Select Task Date</string>
    <string name="please_select_priority">Please Select Priority</string>
    <string name="please_select_alert_reminder">Please Select Alert Reminder</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="task_already_exists">Task with this name already exists</string>
    <string name="exit_app">Are you sure you want to exit app?</string>
    <string name="exit">Exit</string>
</resources>
