<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_stroke"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task_name"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/rounded_corner_solid_grey"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintRight_toLeftOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/rounded_corner_solid_blue"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>