<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="folder"
            type="com.b2b.mytask.db.entities.FolderEntity" />
    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="55dp"
            android:background="@drawable/custom_white_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <com.b2b.mytask.customviews.CustomTextView
                    android:id="@+id/txt_fname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="Delete"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:fontName="@string/bold_font" />

                <com.b2b.mytask.customviews.CustomTextView
                    android:id="@+id/txt_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="Deleting this Folder also delete it's all data."
                    app:fontName="@string/regular_font" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="right"
                    android:orientation="horizontal">

                    <com.b2b.mytask.customviews.CustomTextView
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:text="@string/cancel"
                        android:textColor="@color/deep_purple_500"
                        app:fontName="@string/bold_font" />


                    <com.b2b.mytask.customviews.CustomTextView
                        android:id="@+id/btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:text="@string/delete"
                        android:textColor="@color/purple_500"
                        app:fontName="@string/bold_font" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_dialog"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_shaped_purple"
            android:padding="@dimen/_8sdp" />
    </RelativeLayout>
</layout>