<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:padding="@dimen/_10sdp"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_title_folder"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_create_folder"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/create_folder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <View
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@color/clr_dividerline"
        app:layout_constraintTop_toBottomOf="@+id/layout_title" />


    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view_title">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_folder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_folder_name"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/select_folder_colour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/select_folder_colour"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/clr_dividerline" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:numColumns="6" />
        </RelativeLayout>


    </LinearLayout>


    <!--<android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_main" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintRight_toLeftOf="@+id/txt_save"
        app:layout_constraintTop_toBottomOf="@+id/linear_main" />-->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_corner_solid_grey"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintRight_toLeftOf="@+id/txt_save"
        app:layout_constraintTop_toBottomOf="@+id/linear_main"  />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_corner_solid_blue"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_main" />

</android.support.constraint.ConstraintLayout>

